app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require bootstrap-colorpicker
 *= require font-awesome
 *= require highvis.css.scss
 *= require ui.jqgrid.css
 *= require summernote
 *= require_tree .
 *= require_self
 */

$navbar-default-bg: #111133;
$navbar-default-color: white;
$navbar-default-link-color: white;
$navbar-default-link-hover-color: #DDDDDD;
$table-bg-accent: #E8E8E8;

@import "bootstrap";

body {
  background-color: #ddd;
}

.box-content {
  border: 1px solid #b5b5b5;
  border-top: 0px;
  padding: 20px;
  margin-bottom: 1ex;
  overflow: auto;
}

.box-header {
  background-image: linear-gradient(#fafafa, #eaeaea);
  background-repeat: repeat-x;
  border: 1px solid #b5b5b5;
  border-radius: 4px 4px 0px 0px;
  font-size: x-large;
  padding-top: 10px;
  padding-bottom: 10px;
  margin-top: 1ex;
}

.center {
  margin: 0 auto;
  text-align: center;
}

.create-button {
  margin-bottom: 2ex;
}

.footer {
  text-align: center;
  font-size: smaller;
}

.item {
  background-color: #ddd;
  margin: auto;
  box-shadow: 2px 3px 1px grey;

  .badge {
    float: left;
    margin-right: 15px;
    margin-left: 15px;
  }

  .item-desc {
    min-height: 88px;
    margin: 8px;
    font-size: 0.9em;
  }

  .item-image {
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100%;
    height: 120px;
  }

  .item-title {
    font-size: 1em;
  }
}

.item-block {
  height: 250px;
  margin-bottom: 2em;

  overflow: hidden;
}

.mainContent {
  background-color: #fff;
  box-shadow: 0px 0px 20px grey;
  padding: 18px 20px 18px 20px;
  min-height: 100%;
}

.navbar {
  box-shadow: 0px 0px 10px black;
  border-bottom: 1px solid black;
  margin-bottom: 0px;
  background-color: #113;
  height: 55px;

  // larger font sizes cause weird overflow errors on some names
  @media screen and (max-width: 991px) {
    font-size: 0.9em;
  }

  .navbtn a {
    padding-top: 20px;
  }

  .navbar-brand {
    padding-top: 8px;
  }

  .navbar-collapse.collapsing,
  .navbar-collapse.in {
    background-color: $navbar-default-bg;
  }
}

#outer {
  min-height: 100%;
  margin: 0px;
  padding: 0px 0px 70px 0px;
}

.panel-heading h1 {
  font-size: 20pt;
}

.print {
  display: none;
}

.search-box {
  background-color: #ddd;
  box-shadow: 2px 3px 1px grey;
  padding: 2em;
  margin-bottom: 2ex;
}

.truncate, .truncate * {
  overflow-x: hidden;
  text-overflow: ellipsis;
}

.wide-item {
  background-color: #ddd;
  box-shadow: 2px 3px 1px grey;
  min-height: 210px;
  margin-bottom: 1ex;

  .item-image {
    height: 210px;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    float: left;
  }
}

.word-wrap {
   word-wrap: break-word;
}

